Put headshot back into html

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
     <br>
     <div class="container">
       <div class="row">
+        <div class="col-lg-5">
+          <img id="headshot" class="thumbnail" src="{% static 'app/images/headshot.jpg' %}" alt="Bill Gardner"></img>
+        </div>
+        <div class="col-lg-7">
           <h3>Bill Gardner</h3>
           <br>
           <h6><i class="fa fa-github" aria-hidden="true"></i><a href="http://www.github.com/williamjohngardner" target="blank" >  github.com/williamjohngardner</a></h6>
