modified bio text

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
           <h6><i class="fa fa-github" aria-hidden="true"></i><a href="http://www.github.com/williamjohngardner" target="blank" >  github.com/williamjohngardner</a></h6>
           <br>
           <h5>I’ve had a hammer in my hand since I was big enough to hold one and have been building things ever since I got my first set of Legos for Christmas.
-            <h5>I hold a strong connection to the ethos of the Maker and DIY movements and truly value skills and work ethic above most other things; to that end I made Subasmbly as a tool to help Makers of all types create beautiful objects in a more efficient and accurate fashion.</h5>
+            <h5>I hold a strong connection to the ethos of the Maker and DIY movements and truly value skills and work ethic above most other things; to that end I strive to develop tools to help Makers of all types create beautiful objects in a more efficient and accurate fashion.</h5>
             <h5>I’m a recent graduate of The Iron Yard in Greenville, South Carolina, learning backend web development including Python and Django, with the goal of creating elegant and useful web-based tools.</h5> <h5>I love cheese more than I should.</h5>
           <h6 class="page-header">Backend Development Skills: </h6>
           <div class="col-lg-4">
