--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
           <h3>Bill Gardner</h3>
           <br>
           <h6><i class="fa fa-github" aria-hidden="true"></i><a href="http://www.github.com/williamjohngardner" target="blank" >  github.com/williamjohngardner</a></h6>
+          <h6><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/williamjohngardner" target="blank" >  linkedin.com/in/williamjohngardner</a></h6>
           <br>
           <h5>I’ve had a hammer in my hand since I was big enough to hold one and have been building things ever since I got my first set of Legos for Christmas.
             <h5>I hold a strong connection to the ethos of the Maker and DIY movements and truly value skills and work ethic above most other things; to that end I strive to develop tools to help Makers of all types create beautiful objects in a more efficient and accurate fashion.</h5>
