Developing Single Page Template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,53 +1,118 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-      <title>Bill Gardner | Backend Web Developer</title>
-        <link rel="stylesheet" href="{% static "app/css/bootstrap.css" %}" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="{% static "app/font-awesome/css/font-awesome.css" %}">
-        <link rel="stylesheet" href="{% static "app/css/main.css" %}" media="screen" charset="utf-8">
-  </head>
-  <body>
-    {% block content %}
-    <br>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5">
-          <img id="headshot" class="thumbnail" src="{% static 'app/images/headshot.jpg' %}" alt="Bill Gardner"></img>
+
+
+{% block introcontent %}
+  <br>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col s5">
+        <img id="headshot" class="thumbnail z-depth-4" src="{% static 'app/images/headshot.jpg' %}" alt="Bill Gardner"></img>
+      </div>
+      <div class="col s7">
+        <h2>Bill Gardner</h2>
+        <br>
+        <h6><i class="fa fa-github" aria-hidden="true"></i><a href="http://www.github.com/williamjohngardner" target="blank" >  github.com/williamjohngardner</a></h6>
+        <h6><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/williamjohngardner" target="blank" >  linkedin.com/in/williamjohngardner</a></h6>
+        <br>
+        <h6>I’ve had a hammer in my hand since I was big enough to hold one and have been building things ever since I got my first set of Legos for Christmas.</h6>
+          <h6>I hold a strong connection to the ethos of the Maker and DIY movements and truly value skills and work ethic above most other things; to that end I strive to develop tools to help Makers of all types create beautiful objects in a more efficient and accurate fashion.</h6>
+          <h6>I’m a recent graduate of The Iron Yard in Greenville, South Carolina, learning backend web development including Python and Django, with the goal of creating elegant and useful web-based tools.</h6> <h6>I love cheese more than I should.</h6>
+        <h5 class="page-header">Backend Development Skills: </h5>
+        <div class="col s4">
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Python</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Django</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  RESTful APIs</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  HTML & CSS</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Java</h6>
         </div>
-        <div class="col-lg-7">
-          <h3>Bill Gardner</h3>
-          <br>
-          <h6><i class="fa fa-github" aria-hidden="true"></i><a href="http://www.github.com/williamjohngardner" target="blank" >  github.com/williamjohngardner</a></h6>
-          <h6><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/williamjohngardner" target="blank" >  linkedin.com/in/williamjohngardner</a></h6>
-          <br>
-          <h5>I’ve had a hammer in my hand since I was big enough to hold one and have been building things ever since I got my first set of Legos for Christmas.
-            <h5>I hold a strong connection to the ethos of the Maker and DIY movements and truly value skills and work ethic above most other things; to that end I strive to develop tools to help Makers of all types create beautiful objects in a more efficient and accurate fashion.</h5>
-            <h5>I’m a recent graduate of The Iron Yard in Greenville, South Carolina, learning backend web development including Python and Django, with the goal of creating elegant and useful web-based tools.</h5> <h5>I love cheese more than I should.</h5>
-          <h6 class="page-header">Backend Development Skills: </h6>
-          <div class="col-lg-4">
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Python</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Django</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  RESTful APIs</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  HTML & CSS</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Java</h6>
-          </div>
-          <div class="col-lg-4">
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Git-based Revision Control</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Object Oriented Programming</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Functional Programming</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Cloud Deployment with Heroku</h6>
-            <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Witty Banter</h6>
-          </div>
+        <div class="col s6">
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Git-based Revision Control</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Object Oriented Programming</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Functional Programming</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Cloud Deployment with Heroku</h6>
+          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Witty Banter</h6>
         </div>
       </div>
     </div>
-    {% endblock %}
-    <div class="container">
-      <footer>
-        <h6><div class="glyphicon glyphicon-copyright-mark pull-right">  Copyright 2016 William John Gardner</div><h6>
-      </footer>
-  </body>
-</html>
+  </div>
+{% endblock %}
+{% block portfolio %}
+<div class="lime darken-3">
+<div class="container">
+  <h4>What Things Do I Make:</h4>
+    <img id="modalbutton" src="{% static 'app/images/driveshaft.jpg' %}" alt="" />
+    <img id="modalbutton" src="{% static 'app/images/engine.jpg' %}" alt="" />
+    <img id="modalbutton" src="{% static 'app/images/engineblock.jpg' %}" alt="" />
+        <!-- Modal Trigger -->
+        <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="modal1">Subasmbly</a>
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+      <div class="modal-content">
+        <h4>Modal Header</h4>
+        <p>A bunch of text</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
+        <!-- Modal Trigger -->
+        <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="modal2">Bill's List</a>
+    <!-- Modal Structure -->
+    <div id="modal2" class="modal">
+      <div class="modal-content">
+        <h4>Modal Header</h4>
+        <p>A bunch of text</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
+        <!-- Modal Trigger -->
+        <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="modal3">Bil.ly</a>
+    <!-- Modal Structure -->
+    <div id="modal3" class="modal">
+      <div class="modal-content">
+        <h4>Modal Header</h4>
+        <p>A bunch of text</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+</div>
+{% endblock %}
+{% block skills %}
+  <div class="container">
+    <div class="row">
+      <h4 class="page-header">How I Make The Things I Make: </h4>
+      <div class="col s4">
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Python</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Django</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  RESTful APIs</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  HTML & CSS</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Java</h6>
+      </div>
+      <div class="col s6">
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Git-based Revision Control</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Object Oriented Programming</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Functional Programming</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Cloud Deployment with Heroku</h6>
+        <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Witty Banter</h6>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+{% block extrascript %}
+  <script type="text/javascript">
+    $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    $('.modal-trigger').leanModal();
+    });>
+  </script>
+{% endblock %}
