--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -1,118 +1,6 @@
-.background
-{
-background-repeat:no-repeat;
-background-size:100%;
-}
-
-/*#navigation{
-  background-color: white;
-}*/
-
-#headshot{
-  box-shadow: 5px 5px 10px #888888;  
-}
-
-#login{
-  padding-top: 10px;
-  padding-right: 20px;
-}
-
-#logout{
-  padding-top: 10px;
-  padding-right: 20px;
-}
-
-#sidenav{
-  padding-left: 30px;
-}
-
-#highrise{
-  padding-top: 50px;
-}
-
-nav{
-  padding-bottom: 10px;
-}
-
-#menu{
-  padding-top: 10px;
-}
-
-#search{
-  padding-top: 15px;
-}
-
-#logo{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#logo_sm{
-  padding-bottom: 5px;
-}
-
-
-#tag{
-  display: block;
-  margin-left: 41.5%;
-  margin-right: auto;
-}
-
-#mainimage{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#title{
-  display: inline-block;;
-  margin-left: 7%;
-  margin-right: auto;
-}
-
-#one, #two, #three{
-    width: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    display: inline;
-    padding: 30px 0 40px 88px;
-}
-
-#textone, #texttwo, #textthree{
-    width: 260px;
-    margin-left: 7.75%;
-    margin-right: auto;
-    display: inline-block;
-    text-align: justify;
-}
-
-#tritext{
-  padding-top: 15px;
-}
-
-#textfour{
-    width: 950px;
-    margin-left: 8.25%;
-    margin-right: auto;
-    display: inline-block;
-    text-align: justify;
-    padding-top: 15px;
-    padding-bottom: 100px;
-}
-
-#tripleimg{
-  box-shadow: 0 0 8px gray;
-}
-
-input[type='button'] {
-   text-align: left;
-}
-
-footer{
-  padding: 50px 20px;
-}
-
-#copyright{
-  display: inline;
+#modalbutton{
+  display: inline-block;
+  align-items: center;
+  width: 275px;
+  margin-left: 50px;
 }
