--- a/templates/base.html
+++ b/templates/base.html
@@ -43,11 +43,13 @@
     {% block contact %}
       This is a place that has never existed
     {% endblock %}
-    <div class="container">
-        <footer>
-          <h6><div class="glyphicon glyphicon-copyright-mark pull-right">  Copyright 2016 William John Gardner</div><h6>
-        </footer>
-    </div>
+    <footer class="page-footer blue-grey darken-1">
+      <div class="footer-copyright">
+        <div class="container">
+          © 2016 Copyright William John Gardner
+        </div>
+      </div>
+    </footer>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="{% static 'app/js/materialize.js' %}"></script>
