--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,12 @@
 <div class="container">
   <br>
   <br>
-  <h5>I am a recent graduate of The Iron Yard in Greenville, SC, where I studied backend development,  including Python and Django, with the goal of creating elegant and useful web-based tools.</h5>
-  <h5>I’m experienced in backend web development, object-oriented and functional programming, and relational database integration.</h5>
-  <h5>In my previous life, I spent more than 15 years working in
+  <h2>BACKEND DEVELOPER</h2>
+  <p class="flow-text">I am a recent graduate of The Iron Yard in Greenville, SC, where I studied backend development,  including Python and Django, with the goal of creating elegant and useful web-based tools.</p>
+  <p class="flow-text">I’m experienced in backend web development, object-oriented and functional programming, and relational database integration.</p>
+  <p class="flow-text">I have previously spent more than 15 years working in
   maufacturing environments as both an engineer and a design manager.  As a result, I have a wealth of knowledge and
-  experience creating products in an organized, thoughful, and cost effective manner.</h5>
+  experience creating products in an organized, thoughful, and cost effective manner.</p>
   <br>
   <br>
   <br>
@@ -24,16 +25,83 @@
 {% endblock %}
 {% block portfolio %}
 <div class="blue-grey darken-1">
-  <img id="radio" src="{% static 'app/images/radio.jpg' %}" alt="Bill Gardner"></img>
+  <br>
+  <br>
 <div class="container">
-  I'm going to use Materialize Cards here:
+    <div id="cardsmall" class="card medium">
+      <div id="cardimage" class="card-image">
+        <img src="{% static 'app/images/driveshaft.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal1">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
+      </div>
+    </div>
+    <div id="cardsmall" class="card medium">
+      <div class="card-image">
+        <img id="cardimage" src="{% static 'app/images/engine.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal2">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Bill's List</a>
+      </div>
+    </div>
+    <div id="cardsmall" class="card medium">
+      <div class="card-image">
+        <img id="cardimage" src="{% static 'app/images/engineblock.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal3">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Bil.ly</a>
+      </div>
+    </div>
+    <div id="cardsmall" class="card medium">
+      <div id="cardimage" class="card-image">
+        <img src="{% static 'app/images/driveshaft.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal4">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
+      </div>
+    </div>
+    <div id="cardsmall" class="card medium">
+      <div class="card-image">
+        <img id="cardimage" src="{% static 'app/images/engine.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal5">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Bill's List</a>
+      </div>
+    </div>
+    <div id="cardsmall" class="card medium">
+      <div class="card-image">
+        <img id="cardimage" src="{% static 'app/images/engineblock.jpg' %}" alt="" />
+      </div>
+    <div class="card-content">
+      <p>Subasmbly: Online Revision Control</p>
+    </div>
+      <div class="card-action">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal6">More Information</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Bil.ly</a>
+      </div>
+    </div>
   <br>
   <br>
-    <img id="modalbutton" src="{% static 'app/images/driveshaft.jpg' %}" alt="" />
-    <img id="modalbutton" src="{% static 'app/images/engine.jpg' %}" alt="" />
-    <img id="modalbutton" src="{% static 'app/images/engineblock.jpg' %}" alt="" />
-    <!-- Modal Trigger -->
-    <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal1">Subasmbly</a>
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
       <div class="modal-content">
@@ -44,8 +112,6 @@
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       </div>
     </div>
-        <!-- Modal Trigger -->
-        <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal2">Bill's List</a>
     <!-- Modal Structure -->
     <div id="modal2" class="modal">
       <div class="modal-content">
@@ -56,8 +122,6 @@
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       </div>
     </div>
-        <!-- Modal Trigger -->
-        <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal3">Bil.ly</a>
     <!-- Modal Structure -->
     <div id="modal3" class="modal">
       <div class="modal-content">
@@ -70,13 +134,7 @@
     </div>
   </div>
   <div class="container">
-    <br>
-    <br>
-      <img id="modalbutton" src="{% static 'app/images/driveshaft.jpg' %}" alt="" />
-      <img id="modalbutton" src="{% static 'app/images/engine.jpg' %}" alt="" />
-      <img id="modalbutton" src="{% static 'app/images/engineblock.jpg' %}" alt="" />
-      <!-- Modal Trigger -->
-      <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal4">Print Project</a>
+
       <!-- Modal Structure -->
       <div id="modal4" class="modal">
         <div class="modal-content">
@@ -87,8 +145,6 @@
           <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
         </div>
       </div>
-          <!-- Modal Trigger -->
-          <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal5">Web Project</a>
       <!-- Modal Structure -->
       <div id="modal5" class="modal">
         <div class="modal-content">
@@ -99,8 +155,6 @@
           <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
         </div>
       </div>
-          <!-- Modal Trigger -->
-          <a id="modalbutton" class="waves-effect waves-light btn modal-trigger" href="#modal6">Web Project 2</a>
       <!-- Modal Structure -->
       <div id="modal6" class="modal">
         <div class="modal-content">
@@ -112,13 +166,9 @@
         </div>
       </div>
     </div>
-  <br>
-  <br>
-  <br>
 </div>
 {% endblock %}
 {% block skills %}
-<img id="clock" src="{% static 'app/images/clock.jpg' %}" alt="Bill Gardner"></img>
   <div class="container">
     <div class="row">
       <br>
@@ -130,28 +180,28 @@
       <img id="brands" src="{% static 'app/images/css.png' %}" alt="CSS3 Logo" />
       <div id="skills" class="row">
         <div class="col s4">
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Java</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  GitHub</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Object Oriented Programming</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Functional Programming</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Heroku</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  PostgreSQL</h6>
+          <h6 class="flow-text">Java</h6>
+          <h6 class="flow-text">GitHub</h6>
+          <h6 class="flow-text">Object Oriented Programming</h6>
+          <h6 class="flow-text">Functional Programming</h6>
+          <h6 class="flow-text">Heroku</h6>
+          <h6 class="flow-text">PostgreSQL</h6>
         </div>
         <div class="col s4">
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Bootstrap</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Materialize</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Adobe Photoshop</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Adobe Illustrator</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Adobe InDesign</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Adobe Acrobat</h6>
+          <h6 class="flow-text">Bootstrap</h6>
+          <h6 class="flow-text">Materialize</h6>
+          <h6 class="flow-text">Adobe Photoshop</h6>
+          <h6 class="flow-text">Adobe Illustrator</h6>
+          <h6 class="flow-text">Adobe InDesign</h6>
+          <h6 class="flow-text">Adobe Acrobat</h6>
         </div>
         <div class="col s4">
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  ZSH</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Sublime Text</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  SolidWorks</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Rhinoceros 3D</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  AutoCAD</h6>
-          <h6><i class="fa fa-circle-o" aria-hidden="true"></i>  Google Sketchup</h6>
+          <h6 class="flow-text">ZSH</h6>
+          <h6 class="flow-text">Sublime Text</h6>
+          <h6 class="flow-text">SolidWorks</h6>
+          <h6 class="flow-text">Rhinoceros 3D</h6>
+          <h6 class="flow-text">AutoCAD</h6>
+          <h6 class="flow-text">Google Sketchup</h6>
         </div>
       </div>
       <br>
@@ -161,26 +211,25 @@
 
 {% endblock %}
 {% block resume %}
-<div class="blue-grey darken-1">
-  <img id="barn" src="{% static 'app/images/barn.jpg' %}" alt="Bill Gardner"></img>
+  <div class="blue-grey darken-1">
   <div class="container">
     <br>
     <br>
-    <h3 class="white-text">resume:</h3>
-    <ul class="collapsible" data-collapsible="accordion">
+    <h2 class="white-text">resume:</h2>
+    <ul class="collapsible popout" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header"><i class="material-icons">list</i>Technical Skills</div>
+      <div class="collapsible-header flow-text"><i class="material-icons">list</i>Technical Skills</div>
       <div class="collapsible-body white">
-        <h6>Python Django HTML5 CSS3</h6>
-        <h6>Java Heroku Github RESTful APIs</h6>
-        <h6>Bootstrap Materialize PostgreSQL ZSH</h6>
-        <h6>Object Oriented Programming</h6>
-        <h6>Functional Programming</h6>
-        <h6>Photoshop Illustrator InDesign Acrobat</h6>
-        <h6>Solidworks Rhino3D AutoCAD Google Sketchup</h6></div>
+        <h6 class="flow-text">Python Django HTML5 CSS3</h6>
+        <h6 class="flow-text">Java Heroku Github RESTful APIs</h6>
+        <h6 class="flow-text">Bootstrap Materialize PostgreSQL ZSH</h6>
+        <h6 class="flow-text">Object Oriented Programming</h6>
+        <h6 class="flow-text">Functional Programming</h6>
+        <h6 class="flow-text">Photoshop Illustrator InDesign Acrobat</h6>
+        <h6 class="flow-text">Solidworks Rhino3D AutoCAD Google Sketchup</h6></div>
     </li>
     <li>
-      <div class="collapsible-header"><i class="material-icons">web</i>Web Experience</div>
+      <div class="collapsible-header flow-text"><i class="material-icons">web</i>Web Experience</div>
       <div class="collapsible-body white">
         <h6>Childrens Health Board: Wordpress Website & Hosting Setup</h6>
         <h6>Sunica.org: Wordpress Website & Hosting Setup</h6>
@@ -191,12 +240,12 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header"><i class="material-icons">assignment</i>Education</div>
+      <div class="collapsible-header flow-text"><i class="material-icons">assignment</i>Education</div>
       <div class="collapsible-body white"><h6>Python & Django Curriculum | The Iron Yard  | May – August 2016</h6>
         <h6>B.S Industrial Design  |  Virginia Tech  |  May 2000, Cum Laude</h6></div>
     </li>
     <li>
-      <div class="collapsible-header"><i class="material-icons">work</i>Recent Experience</div>
+      <div class="collapsible-header flow-text"><i class="material-icons">work</i>Recent Experience</div>
       <div class="collapsible-body white">
         <h6>Principal, 2011-2016</h6>
         <h6>William John Gardner Design Studio, LLC</h6>
@@ -219,31 +268,36 @@
 </div>
 {% endblock %}
 {% block contact %}
-<img id="clock" src="{% static 'app/images/train.jpg' %}" alt="Bill Gardner"></img>
-  <div class="container">
-    <div class="row">
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Contact Me</span>
-              <ul>
-                <li>(443) 340-5272</li>
-                <li><a href="mailto:bill@williamjgardner.com" target="blank">bill@williamjgardner.com</a></li>
-                <li><a href="http://www.williamjgardner.com" target="blank">www.williamjgardner.com</a></li>
-                <li><a href="http://www.github.com/williamjohngardner" target="blank">github.com/williamjohngardner</a></li>
-                <li><a href="https://www.linkedin.com/in/williamjohngardner" target="blank">linkedin.com/in/williamjohngardner</a></li>
-              </ul>
-            </div>
-            <div class="card-action">
-              <a href="mailto:bill@williamjgardner.com">Email Me</a>
-              <a href="http://www.github.com/williamjohngardner">My GitHub</a>
-              <a href="https://www.linkedin.com/in/williamjohngardner">My LinkedIn</a>
-
-            </div>
-          </div>
+<br>
+<div class="container">
+  <div class="col s12 m7">
+    <h2 class="header">contact me:</h2>
+    <div class="card horizontal blue-grey darken-1">
+      <div class="card-image">
+        <img src="{% static 'app/images/headshot.jpg' %}" alt="Bill Gardner Headshot" />
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title"></span>
+          <ul>
+            <li class="white-text flow-text">(443) 340-5272</li>
+            <li><a href="mailto:bill@williamjgardner.com" target="blank">bill@williamjgardner.com</a></li>
+            <li><a href="http://www.williamjgardner.com" target="blank">www.williamjgardner.com</a></li>
+            <li><a href="http://www.github.com/williamjohngardner" target="blank">github.com/williamjohngardner</a></li>
+            <li><a href="https://www.linkedin.com/in/williamjohngardner" target="blank">linkedin.com/in/williamjohngardner</a></li>
+          </ul>
+        </div>
+        <div class="card-action">
+          <a href="mailto:bill@williamjgardner.com">Email Me</a>
+          <a href="http://www.github.com/williamjohngardner">My GitHub</a>
+          <a href="https://www.linkedin.com/in/williamjohngardner">My LinkedIn</a>
         </div>
       </div>
+    </div>
   </div>
+</div>
+<br>
+<br>
 {% endblock %}
 {% block extrascript %}
 <script>
